package id.ac.polinema;

public interface DiscountPolicy {
    int calculate(int amount);
}
