package id.ac.polinema;

public interface EmailReceiptSendable {
    void sendEmailReceipt();
}
