package id.ac.polinema;

public interface InvoicePrintable {
    void printInvoice();
}
