package id.ac.polinema;

public class InvoicePrinter implements InvoicePrintable {
    public void printInvoice() {
        System.out.println("Printing invoice...");
    }
}
