package id.ac.polinema;

public interface ShippingLabelPrintable {
    void printShippingLabel();
}
